--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Palaiseau, France"
   employer         :
   pubmed           : 
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.com/citations?user=KQsE6U4AAAAJ"
   email            : "cyril.chhun@telecom-paris.fr"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
